# XfinAudio

./: .gitignore  AGENTS.md  CONTRIBUTING.md  HARMONIC_MIXING.md  Integración con la función Prepare de Serato Dj .md  LICENSE  Lanzar_XfinAudio.command  NOTICE.md  PLAN-REVIEW-LOG-docs-audit-2026-07-18.md  PLAN-REVIEW-LOG.md  PLAN-docs-audit-2026-07-18.md  PLAN.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: non-audio-release-gates.yml  publish-to-pypi.yml
.planning/codebase/: AGENT-DISPATCH.md  ARCHITECTURE.md
assets/icons/: app-icon.icns
docs/: IMPLEMENTATION_HANDOFF.md  clean-macos-account-validation.md  harmonic-mixing.md  help-3-mixed-in-key-metadata-contract.md  help-4-desktop-metadata-walking-skeleton.md  help-5-scoring-sequence-optimizer.md  help-6-desktop-strategies-dj-controls.md  help-7-explainability-exports-serato-quality.md  help-8-release-hardening.md  macos-signing-notarization-dmg-plan.md  open-source-license.md  open-source-release-backlog.md  packaging-strategy.md  pyinstaller-packaging-spike.md  qa-manual-mik-evidence.md  recommendation-review-view.md  release-candidate-evidence.md  release-notes-template.md  release-notes-v1.0.1.md  release-notes-v1.0.2.md  release-readiness-smoke.md  repository-publication-checklist.md  restart-handoff-2026-06-03.md  safe-export-folder-settings.md  scan-progress-cancel.md  serato-compatibility-matrix.md  serato-fixture-compatibility.md  third-party-license-inventory.md  ui-empty-states-warning-clarity.md  update-path.md  xfinaudio-stack-and-scope-decision.md
openspec/: config.yaml
scripts/: alert_user.sh  benchmark_spectral_analysis.py  eval_recommendation.py  fill_spanish_translations.py  inspect_mik_tags.py  manual_mik_qa_harness.py  package_install_smoke.py  performance_baseline.py  pyinstaller_build_smoke.py  release_gate_check.py  render_release_gate_evidence.py  screenshot_app_before_scan.py  screenshot_app_with_colors.py  sign_notarize_dmg.sh  smoke_release_readiness.py  source_package_hygiene_check.py  third_party_license_inventory.py  update_translations.py  validate_spectral_colors.py  xfinaudio-launcher.sh
tests/: conftest.py  integration_flow.py  test_anchor_preflight.py  test_app_state.py  test_app_state_transitions.py  test_application_dj_readiness.py  test_application_dj_readiness_export.py  test_application_dj_readiness_summary.py  test_application_package_import_boundaries.py  test_application_playlist_file_export.py  test_application_prep_copilot.py  test_application_recommendation_candidates.py  test_application_saved_playlists.py  test_application_serato_metadata_export.py  test_application_serato_playlist_export.py  test_application_spectral_profile_display.py  test_application_strategy_catalog.py  test_application_vertical_playlist_flow.py  test_audio_analysis_planning.py  test_audio_player.py  test_audio_player_state.py  test_audio_preview_errors.py  test_batch_analyzer.py  test_build_log.py  test_build_screen.py  test_build_view_model.py  test_camelot_scoring.py  test_candidate_pool.py  test_core_package_import_boundaries.py  test_dependency_bounds.py  test_desktop_app.py  test_desktop_boundary_imports.py  test_dj_controls.py  test_dj_readiness.py  test_dj_readiness_controller.py  test_duplicate_grouping.py  test_explainability.py  test_export_coordinator.py  test_export_dependencies.py  test_export_naming.py  (+97 more)
translations/: xfinaudio_en.ts  xfinaudio_es.ts
(+1151 files in other folders)
