[project]
name = "xfinaudio"
version = "1.0.0"
description = "Metadata-driven DJ playlist assistant discovery prototype."
readme = "README.md"
license = "GPL-3.0-only"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: MacOS X",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Sound/Audio",
]
requires-python = ">=3.11"
dependencies = [
    "mutagen>=1.47,<2.0",
    "pydantic>=2.0,<3.0",
    "PySide6>=6.0,<7.0",
    "pyobjc-framework-Cocoa>=10.0; platform_system == 'Darwin'",
    "setproctitle>=1.3",
]

[project.scripts]
xfinaudio = "xfinaudio.desktop.app:main"

[dependency-groups]
dev = ["pyinstaller==6.20.0", "pytest>=8.0", "ruff>=0.11"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
extend-per-file-ignores = { "scripts/fill_spanish_translations.py" = ["E501", "F601"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.hatch.build.targets.wheel]
packages = ["src/xfinaudio"]
