[project]
name = "xfinaudio"
version = "1.0.2"
description = "Metadata-driven DJ playlist assistant discovery prototype."
readme = "README.md"
license = "GPL-3.0-only"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: MacOS X",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Sound/Audio",
]
requires-python = ">=3.11"
dependencies = [
    "mutagen>=1.47,<2.0",
    "pydantic>=2.0,<3.0",
    "PySide6>=6.0,<7.0",
    "pyobjc-framework-Cocoa>=10.0; platform_system == 'Darwin'",
    "setproctitle>=1.3",
    "librosa>=0.10,<0.12",
    "musicbrainzngs>=0.7,<1.0",
    "numpy>=1.24,<3.0",
    "pylast>=5.2,<6.0",
    "spotipy>=2.23,<3.0",
]

[project.scripts]
xfinaudio = "xfinaudio.desktop.app:main"

[dependency-groups]
dev = [
    "pyinstaller==6.20.0",
    "pyright>=1.1.410",
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
pythonVersion = "3.11"
include = ["src", "tests"]
exclude = [".venv", "build", "dist", "node_modules", ".ruff_cache", ".pytest_cache"]
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportPrivateImportUsage = false
reportOptionalMemberAccess = false
reportCallIssue = false
reportAttributeAccessIssue = false

[tool.coverage.run]
source = ["src/xfinaudio"]
branch = false

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_empty = true
omit = ["*/tests/*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
extend-per-file-ignores = { "scripts/fill_spanish_translations.py" = ["E501", "F601"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.hatch.build.targets.wheel]
packages = ["src/xfinaudio"]
